--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
     "tsc": "tsc",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "dev": "nodemon src/infrastructure/api/server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -20,16 +21,22 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.1.0",
     "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
     "ts-node": "^10.6.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.17.0",
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.2",
+    "supertest": "^6.2.2",
     "uuid": "^8.3.2"
   }
 }
