--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: "Iniciando container"
-        run: docker-compose up --build -d
+        run: docker compose up --build -d
 
       - name: "Executando lint"
         run: docker compose exec app npm run lint
