fix: :bug: Ajuste fluxo gitflow
Ajuste fluxo gitflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,9 @@ jobs:
       - name: "Iniciando container"
         run: docker compose up --build -d
 
+      - name: "Executando NPM Install"
+        run: docker compose exec app npm install
+
       - name: "Executando lint"
         run: docker compose exec app npm run lint
 
