--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,13 +14,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: "Iniciando container"
-        run: docker compose up --build -d
+        run: docker compose -f docker-compose_CI.yml up --build -d
 
       - name: "Executando NPM Install"
         run: docker compose exec -u node app npm install
 
       - name: "Executando lint"
-        run: docker compose exec app npm run lint
+        run: docker compose exec -u node app npm run lint
 
       - name: "Executando testes"
-        run: docker compose exec app npm run test
+        run: docker compose exec  -u node app npm run test
