--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     entrypoint: ./.docker/entrypoint.sh
     volumes:
       - .:/home/node/app
-    # ports:
-    #   - 3002:3000
+    ports:
+      - 3000:3000
     tty: true
