--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,7 +17,7 @@ jobs:
         run: docker compose up --build -d
 
       - name: "Aguardando finalizar npm install"
-        run: docker compose exec app wait-for http://localhost:3000/customer -t 120 --
+        run: docker compose exec -u node app wait-for http://localhost:3000/customer -t 120 --
 
       - name: "Executando lint"
         run: docker compose exec -u node app npm run lint
