--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,10 +14,15 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: "Iniciando container"
-        run: docker compose up --build -d
+        run: docker compose up --build -d       
+
+      # - name: "Aguardando finalizar npm install"
+      #   run: docker compose exec -t app wait-for app:3000 -t 120 -- echo "npm install finalizado"
 
       - name: "Aguardando finalizar npm install"
-        run: docker compose exec -t app wait-for app:3000 -t 120 -- echo "npm install finalizado"
+      - uses: iFaxity/wait-on-action@v1.1.0
+        with:
+          resource: http://localhost:3000/customer
 
       - name: "Executando lint"
         run: docker compose exec -u node app npm run lint
