--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set Up environment
+        env: 
+          ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
+
       - name: "Iniciando container"
         run: docker compose up --build -d  
 
