--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,4 +18,4 @@ jobs:
           compose-file: "./docker-compose.yml"
           down-flags: "--volumes"
           services: app
-          run: npm run lint
+          test-command: npm run lint
