--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,10 +12,13 @@ jobs:
 
     steps:
       # need checkout before using compose-action
-      - uses: actions/checkout@v3
-      - uses: isbang/compose-action@v1.5.1
-        with:
-          compose-file: "./docker-compose.yml"
-          down-flags: "--volumes"
-          services: app
-          test-command: "npm run lint"
+    - uses: actions/checkout@v3
+    - uses: adambirds/docker-compose-action@v1.3.0
+      with:
+        compose-file: "./docker/docker-compose.yml"
+        down-flags: "--volumes"
+        services: |
+          helloworld2
+          helloworld3
+        test-container: helloworld
+        test-command: "npm run lint"
