--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: adambirds/docker-compose-action@v1.3.0
       with:
-        compose-file: "./docker/docker-compose.yml"
+        compose-file: "./docker-compose.yml"
         down-flags: "--volumes"
         services: |
           helloworld2
