--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,15 +7,27 @@ on:
     branches: [ master ]
 
 jobs:
-  CI:
+  # This workflow contains multiple jobs
+  build_test:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        node-version: [12.x]
+        
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # need checkout before using compose-action
-    - uses: actions/checkout@v3
-    - uses: adambirds/docker-compose-action@v1.3.0
-      with:
-        compose-file: "./docker-compose.yml"
-        down-flags: "--volumes"
-        services: app
-        test-command: "npm run lint"
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: setup node
+        uses: actions/setup-node@master
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      # install applicaion dependencies
+      - name: Install dependencies
+        run: npm install
+      # build and test the apps     
+      - name: test
+        run: npm run test
