--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,4 +30,6 @@ jobs:
         run: npm install
       # build and test the apps     
       - name: test
-        run: npm run test
+        run: |
+          npm run lint
+          npm run test
