feat: :sparkles: Incluso presenters para customer
Incluso presenters para customer

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@swc/core": "^1.2.148",
     "@swc/jest": "^0.2.20",
     "@types/jest": "^27.4.1",
+    "@types/jstoxml": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.1.0",
@@ -32,6 +33,7 @@
     "@types/uuid": "^8.3.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jstoxml": "^3.2.8",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.17.0",
     "sequelize-typescript": "^2.1.3",
